# nomi-cose-citta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nomicosecitta/: config.json  test_gui.py
nomicosecitta/src/client/: gui.py  main.py  message_handler.py  network_handler.py  p2p_broadcaster.py  reconnection_manager.py
nomicosecitta/src/client/gui/: __init__.py  client_gui.py  gui_manager.py  reconnection_overlay.py  theme.py  utils.py
nomicosecitta/src/client/gui/screens/: __init__.py  base_screen.py  game.py  game_screen.py  lobby.py  lobby_screen.py  login.py  login_screen.py
nomicosecitta/src/client/gui/widgets/: __init__.py  chat_panel.py  player_list.py  timer_display.py  voting_panel.py
nomicosecitta/src/common/: constants.py  message.py
nomicosecitta/src/server/: client_handler.py  game_engine.py  game_server.py  game_session.py  main.py  replication.py  round_manager.py  state_manager.py
nomicosecitta/src/server/session/: answer_validator.py  game_session.py  scoring_engine.py  timer_manager.py  voting_aggregator.py
nomicosecitta/tests/: test_client_chat.py  test_game_server.py  test_game_session.py  test_gui_lobby.py  test_gui_login.py  test_lobby_logic.py  test_message.py  test_network_handler.py  test_reconnection.py  test_round_manager.py  test_state_manager.py
